# time_tracker

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .pylintrc  .templatesyncignore  README.md  checks.sh  pre_commit_script.sh  pyproject.toml
.github/workflows/: main.yml  template-sync.yml
config/: sample_clients.json  sample_invoice_state.json  sample_me.json
src/python_template/: __init__.py  constants.py
src/python_template/config/: __init__.py  defaults.yaml  load_config.py
src/python_template/logger/: logger.py
src/python_template/utils/: __init__.py  get_unique_filename.py  split_args_for_inits.py
src/script-profits/: run.py
src/script_profits/: run.py
src/time_tracker/: __init__.py  constants.py  debug_on_error.py  run.py  tracker.py
src/time_tracker/config/: __init__.py  defaults.yaml  load_config.py
src/time_tracker/config/base_config/: __init__.py  base_config_models.py
src/time_tracker/config/client_config/: __init__.py  client_loader.py  client_models.py
src/time_tracker/config/invoice_state_config/: __init__.py  invoice_state_loader.py  invoice_state_models.py
src/time_tracker/config/me_config/: __init__.py  me_config_loader.py  me_config_models.py
src/time_tracker/logger/: __init__.py  logger.py
src/time_tracker/utils/: __init__.py  get_unique_filename.py  split_args_for_inits.py
templates/: sample_invoice.tex.jinja2
tests/: conftest.py  test_db.csv  test_debug_on_error.py  test_logger.py  test_run.py  test_tracker.py
tests/test_config/: test_load_config.py
tests/test_config/test_base_config/: test_base_config_models.py
tests/test_config/test_client_config/: test_client_config_models.py
tests/test_config/test_invoice_state_config/: test_invoice_state_loader.py  test_invoice_state_models.py
tests/test_config/test_me_config/: test_me_config_loader.py  test_me_config_models.py
tests/test_logger/: conftest.py  test_logger.py
tests/test_utils/: conftest.py  test_get_unique_filename.py  test_split_args_for_inits.py
