[tool.poetry]
name = "time_tracker"
version = "0.1.0"
description = ""
authors = ["r-spiewak <63987228+r-spiewak@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "time_tracker", from = "src"}]
include = [
  "assets/sample-logo.svg",
  "config/sample_clients.json",
  "src/time_tracker/config/*.yaml",
  "template/sample_invoice.tex.jinja2"
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
pandas = "^2.2.2"
pytest-env = "^1.1.5"
pyyaml = "^6.0.2"
pydantic = {extras = ["email"], version = "^2.11.7"}
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
isort = "^5.13.2"
black = "^24.2.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
pytest = "^8.0.0"
coverage = "^7.4.1"
pre-commit = "^3.6.1"
pytest-testdox = "^3.1.0"
pytest-mock = "^3.14.0"
types-pyyaml = "^6.0.12.20250516"

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | \.git
  | __pycache__
  | \.tox
  | \venv
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 79
skip_glob = [
  '*.parquet'
]
filter_files = true
skip_gitignore = true

[tool.mypy]
exclude = [
  '\.yaml$',
  '\.yml$',
  '\.toml$',
  '\.venv'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "--basetemp=/tmp/pytest"

[tool.coverage.run]
source = ["src", "tests"]
omit = ["tests/**/conftest.py", "tests/*"]
# For avoiding sqlite3 concurrency issues on CIFS drives:
data_file = "/tmp/time_tracker/.coverage"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    "if DEBUG_PRINT:",
    "if DEBUG_PRINTS:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.poetry.scripts]
time-tracker = 'time_tracker.run:run'
time_tracker = 'time_tracker.run:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
